change showinfomodal to alert

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
         #transferModalContent, #incomeModalContent, #expenseModalContent, #transactionsModalContent, #deleteConfirmModalContent {
             background-color: #fefefe;
             margin: 5% auto;
+            width: auto;
+            max-width: 600px;
             padding: 20px;
             border: 1px solid #888;
             width: 80%;
@@ -42,25 +44,13 @@
             align-items: center;
         }
         .modal-content {
-            background-color: #fefefe;
-            margin: 10% auto; /* 将模态对话框向下移动 */
-            padding: 20px;
-            border: 1px solid #888;
-            width: auto; /* 自动调整宽度 */
-            max-width: 600px; /* 限制最大宽度 */
-            text-align: center;
-        }
-        .modal-title {
-            margin-bottom: 20px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .modal-body {
-            margin-bottom: 20px;
-            font-size: 18px;
-        }
-        .modal-footer {
-            text-align: center;
+        background-color: #fefefe;
+        margin: 10% auto; /* 将模态对话框向下移动 */
+        padding: 10px;
+        border: 1px solid #888;
+        width: auto; /* 自动调整宽度 */
+        max-width: 600px; /* 限制最大宽度 */
+        text-align: center;
         }
         .close {
             color: #aaa;
